<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_hint"
            style="@style/EditText"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1" />
    </com.google.android.material.textfield.TextInputLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:useDefaultMargins="true">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_1"
            android:layout_columnWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_2"
            android:layout_columnWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_3"
            android:layout_columnWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_4"
            android:layout_columnWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_5"
            android:layout_columnWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_6"
            android:layout_columnWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_7"
            android:layout_columnWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_8"
            android:layout_columnWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_9"
            android:layout_columnWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_0"
            android:layout_columnSpan="2"
            android:layout_columnWeight="2"
            style="@style/CalcButton.Action" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_dot"
            android:layout_columnWeight="1"
            style="@style/CalcButton.Action" />

    </GridLayout>

    <Button
        android:id="@+id/preferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preferences" />

    <Button
        android:id="@+id/link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_link" />

</LinearLayout>